--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -19,5 +19,5 @@ html { overflow-y: scroll; }
 {% endfor %}
 </div> 
 
-<script src="{{ "/assets/js/vendor/imagesloaded.min.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/vendor/masonry.pkgd.min.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "https://lapreamarcelo.github.io/assets/js/vendor/imagesloaded.min.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "https://lapreamarcelo.github.io/assets/js/vendor/masonry.pkgd.min.js" | relative_url }}" type="text/javascript"></script>
