--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Main JS (navbar.js, katex_init.js and masonry_init.js)-->
-    <script defer=true src="{{ '/assets/js/main.min.js' | relative_url }}"></script>
+    <script defer=true src="{{ 'https://lapreamarcelo.github.io/assets/js/main.min.js' | relative_url }}"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ 'https://lapreamarcelo.github.io/assets/css/main.css' | relative_url }}">
 
     <!--Favicon-->
     <link rel="shortcut icon" href="{{ site.favicon | relative_url }}" type="image/x-icon">
@@ -19,7 +19,7 @@
     
     {% if page.bootstrap %}
     <!-- Bootstrap-4.1.3 isolation CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/vendor/bootstrap-iso.min.css' | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ 'https://lapreamarcelo.github.io/assets/css/vendor/bootstrap-iso.min.css' | relative_url }}">
 
     <!-- JQuery 3.3.1 -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -32,7 +32,7 @@
     <!-- KaTeX 0.8.3 -->
     <!-- if you have any issue check https://github.com/KaTeX/KaTeX -->
     {% if site.katex or site.theme_settings.katex %}
-    <script src="{{ '/assets/js/vendor/katex.min.js' | relative_url }}"></script>
+    <script src="{{ 'https://lapreamarcelo.github.io/assets/js/vendor/katex.min.js' | relative_url }}"></script>
     {% endif %}
 
     <!-- Google Analytics -->
