--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 {% include share_thumbnail.html page=page %}
 
 <article {% if page.feature-img %}class="feature-image"{% endif %}>
-  <header id="main" style="background-image: url('{{ page.feature-img | relative_url }}')">
+  <header id="main" style="height: 300px; background-image: url('{{ page.feature-img | relative_url }}')">
     <h1 id="{{ page.title | default: "" | cgi_escape }}" class="title">
         {{ page.title }}
     </h1>
