--- a/Output/MyTheme/MarkDown.css
+++ b/Output/MyTheme/MarkDown.css
@@ -12,8 +12,10 @@
 blockquote {
   background: #000000;
   border-left: 10px solid #588da8;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
   margin: 1.5em 10px;
-  padding: 0.5em 10px;
+  padding: 10px 10px 10px 15px;
   quotes: "\201C""\201D""\2018""\2019";
 }
 
